# flick-rust

./: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  test.yml
src/: App.css  App.tsx  i18n.ts  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: 99-vial.rules
src-tauri/src/: apps.rs  autostart.rs  bridge_ws.rs  config.rs  domain.rs  gnome_shortcuts.rs  hid.rs  lib.rs  main.rs  ports.rs  trigger_ipc.rs
