[package]
name = "tauri-app"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
homepage = "https://github.com/dmux/flick-rust"
repository = "https://github.com/dmux/flick-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Name the produced executable `flick` (matches productName) instead of the
# default package name. Tauri uses the cargo binary name for the installed
# executable and the generated `.desktop` Exec/StartupWMClass.
[[bin]]
name = "flick"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
hidapi = "2"
auto-launch = "0.5"
dirs = "5"
open = "5"
plist = "1"
mockall = "0.13"
regex = "1"
base64 = "0.21"
futures-util = "0.3"




